--- a/desarrollopa-master/desarrollopa/desarrollopa.vcxproj
+++ b/desarrollopa-master/desarrollopa/desarrollopa.vcxproj
@@ -180,6 +180,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="models\bubble.obj" />
+    <Object Include="models\fire.obj" />
+    <Object Include="models\waterdrop.obj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets" Condition="Exists('..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets')" />
